--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <body>
-    <div class="fb-send-to-messenger" messenger_app_id="219102351974463" page_id="1707904982629563" data-ref="heroku send to messenger"
-        color="blue" size="standard">
+    <div class="fb-send-to-messenger" messenger_app_id="219102351974463" page_id="1707904982629563" data-ref="heroku" color="blue" size="standard">
     </div>
 </body>
 <script>
